@@ -1,5 +1,9 @@
 package org.example;
 
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -8,12 +12,13 @@ import java.util.List;
 
 /**
  * A class to represent a user's bank account.
- * It stores the balance, PIN, and transaction history.
+ * It stores the balance, PIN, and transaction history, and logs all transactions to a CSV file.
  */
 public class BankAccount {
     private double balance;
     private String pin;
     private final List<String> transactionHistory;
+    private final String historyFilePath;
     private static final int MAX_HISTORY_ITEMS = 10;
 
     /**
@@ -25,8 +30,12 @@ public class BankAccount {
         this.balance = Math.max(0, initialBalance);
         this.pin = pin;
         this.transactionHistory = new ArrayList<>();
-        if (initialBalance > 0) {
-            addTransaction("DEPOSIT", initialBalance);
+        this.historyFilePath = "transaction_history.csv";
+
+        // Check if this is a new account with a starting balance
+        File historyFile = new File(historyFilePath);
+        if (!historyFile.exists() && initialBalance > 0) {
+            addTransaction("INITIAL DEPOSIT", initialBalance);
         }
     }
 
@@ -38,25 +47,16 @@ public class BankAccount {
         return this.pin.equals(enteredPin);
     }
 
-    /**
-     * Changes the account's PIN after validating the old one.
-     * @param oldPin The current PIN.
-     * @param newPin The new PIN to set.
-     * @return true if the PIN was changed successfully, false otherwise.
-     */
     public boolean changePin(String oldPin, String newPin) {
         if (validatePin(oldPin)) {
             this.pin = newPin;
+            // Optionally log this event
+            logTransactionToFile("PIN CHANGE", 0, this.balance);
             return true;
         }
         return false;
     }
 
-    /**
-     * Deposits money and records the transaction.
-     * @param amount The amount to deposit.
-     * @return A status message.
-     */
     public String deposit(double amount) {
         if (amount > 0) {
             balance += amount;
@@ -67,11 +67,6 @@ public class BankAccount {
         }
     }
 
-    /**
-     * Withdraws money and records the transaction.
-     * @param amount The amount to withdraw.
-     * @return A status message.
-     */
     public String withdraw(double amount) {
         if (amount <= 0) {
             return "Withdrawal amount must be positive.";
@@ -84,25 +79,55 @@ public class BankAccount {
         }
     }
 
-    /**
-     * Adds a formatted transaction string to the history.
-     * @param type The type of transaction (e.g., DEPOSIT).
-     * @param amount The amount involved.
-     */
     private void addTransaction(String type, double amount) {
+        // Add to in-memory list for quick display
         if (transactionHistory.size() >= MAX_HISTORY_ITEMS) {
-            transactionHistory.removeFirst(); // Remove the oldest transaction
+            transactionHistory.remove(0);
         }
+        String formattedTransaction = formatTransaction(type, amount);
+        transactionHistory.add(formattedTransaction);
+
+        // Log the transaction to the CSV file
+        logTransactionToFile(type, amount, this.balance);
+    }
+
+    private String formatTransaction(String type, double amount) {
         String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-        String sign = type.equals("DEPOSIT") ? "+" : "-";
-        transactionHistory.add(String.format("%s | %-10s | %s$%.2f", timestamp, type, sign, amount));
+        String sign = type.contains("DEPOSIT") ? "+" : "-";
+        if (type.equals("PIN CHANGE")) sign = " ";
+        return String.format("%s | %-17s | %s$%.2f", timestamp, type, sign, amount);
     }
 
     /**
-     * Returns an unmodifiable list of the transaction history.
-     * @return The list of transactions.
+     * Appends a transaction record to the CSV file.
+     * @param type The type of transaction (e.g., DEPOSIT).
+     * @param amount The amount involved.
+     * @param newBalance The balance after the transaction.
      */
+    private void logTransactionToFile(String type, double amount, double newBalance) {
+        // 'try-with-resources' ensures the writer is closed automatically.
+        try (FileWriter fw = new FileWriter(historyFilePath, true);
+             PrintWriter pw = new PrintWriter(fw)) {
+
+            File file = new File(historyFilePath);
+            // Write a header if the file is new/empty
+            if (file.length() == 0) {
+                pw.println("Timestamp,Transaction Type,Amount,Balance After Transaction");
+            }
+
+            String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+            pw.printf("%s,%s,%.2f,%.2f%n", timestamp, type, amount, newBalance);
+
+        } catch (IOException e) {
+            // In a real application, you might show an error to the user.
+            // For this example, we'll just print to the console.
+            System.out.println("Error writing to transaction log: " + e.getMessage());
+        }
+    }
+
     public List<String> getTransactionHistory() {
+        // This returns the recent history stored in memory.
+        // For a full history, you would read from the CSV file.
         return Collections.unmodifiableList(transactionHistory);
     }
 }
